--- a/docs/modules/trino/examples/usage_guide/trino-secure-internal-tls.yaml
+++ b/docs/modules/trino/examples/usage_guide/trino-secure-internal-tls.yaml
@@ -23,7 +23,7 @@ spec:
     tls:
       internalSecretClass: trino-internal-tls # <1>
     authentication:
-      - authenticationClass: trino-file-auth # <3>
+      - authenticationClass: trino-users # <3>
     catalogLabelSelector:
       matchLabels:
         trino: simple-trino
@@ -52,7 +52,7 @@ spec:
 apiVersion: authentication.stackable.tech/v1alpha1
 kind: AuthenticationClass
 metadata:
-  name: trino-file-auth # <3>
+  name: trino-users # <3>
 spec:
   provider:
     static:
