Fixed always adding query.max-memory-per-node with a fixed value of 1GB

--- a/deploy/config-spec/properties.yaml
+++ b/deploy/config-spec/properties.yaml
@@ -140,14 +140,11 @@ properties:
       datatype:
         type: "string"
         unit: *unitMemory
-      defaultValues:
-        - fromVersion: "0.0.0"
-          value: "1GB"
       roles:
         - name: "coordinator"
-          required: true
+          required: false
         - name: "worker"
-          required: true
+          required: false
       asOfVersion: "0.0.0"
 
   - property: &httpServerAuthenticationType
