--- a/deploy/helm/trino-operator/configs/properties.yaml
+++ b/deploy/helm/trino-operator/configs/properties.yaml
@@ -140,14 +140,11 @@ properties:
       datatype:
         type: "string"
         unit: *unitMemory
-      defaultValues:
-        - fromVersion: "0.0.0"
-          value: "1GB"
       roles:
         - name: "coordinator"
-          required: true
+          required: false
         - name: "worker"
-          required: true
+          required: false
       asOfVersion: "0.0.0"
 
   - property: &httpServerAuthenticationType
