Added three test suites

--- a/tests/test-definition.yaml
+++ b/tests/test-definition.yaml
@@ -90,3 +90,18 @@ tests:
   - name: cluster-operation
     dimensions:
       - trino-latest
+suites:
+  - name: latest
+    patch:
+      - dimensions:
+          - expr: last
+  - name: smoke
+    select:
+      - smoke
+  - name: openshift
+    patch:
+      - dimensions:
+          - expr: last
+      - dimensions:
+          - name: openshift
+            expr: "true"
