Update to propose CRD change

--- a/deploy/helm/trino-operator/crds/crds.yaml
+++ b/deploy/helm/trino-operator/crds/crds.yaml
@@ -3073,51 +3073,53 @@ spec:
                     generic:
                       properties:
                         connectorName:
-                          description: Name of the Trino connector. Will end in `connector.name`
+                          description: Name of the Trino connector. Will be passed to `connector.name`.
                           type: string
                         properties:
                           additionalProperties:
-                            type: string
-                          default: {}
-                          description: A map of properties to put in the connector configuration file
-                          type: object
-                        propertiesFromConfigMap:
-                          additionalProperties:
-                            description: Selects a key from a ConfigMap.
+                            oneOf:
+                              - required:
+                                  - value
+                              - required:
+                                  - valueFromSecret
+                              - required:
+                                  - valueFromConfigMap
                             properties:
-                              key:
-                                description: The key to select.
+                              value:
                                 type: string
-                              name:
-                                description: 'Name of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names'
-                                type: string
-                              optional:
-                                description: Specify whether the ConfigMap or its key must be defined
-                                type: boolean
-                            required:
-                              - key
+                              valueFromConfigMap:
+                                description: Selects a key from a ConfigMap.
+                                properties:
+                                  key:
+                                    description: The key to select.
+                                    type: string
+                                  name:
+                                    description: 'Name of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names'
+                                    type: string
+                                  optional:
+                                    description: Specify whether the ConfigMap or its key must be defined
+                                    type: boolean
+                                required:
+                                  - key
+                                type: object
+                              valueFromSecret:
+                                description: SecretKeySelector selects a key of a Secret.
+                                properties:
+                                  key:
+                                    description: The key of the secret to select from.  Must be a valid secret key.
+                                    type: string
+                                  name:
+                                    description: 'Name of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names'
+                                    type: string
+                                  optional:
+                                    description: Specify whether the Secret or its key must be defined
+                                    type: boolean
+                                required:
+                                  - key
+                                type: object
                             type: object
                           default: {}
-                          description: A map of properties pulled from a ConfigMap /// Values must be a `ConfigMapKeySelector`
-                          type: object
-                        propertiesFromSecret:
-                          additionalProperties:
-                            description: SecretKeySelector selects a key of a Secret.
-                            properties:
-                              key:
-                                description: The key of the secret to select from.  Must be a valid secret key.
-                                type: string
-                              name:
-                                description: 'Name of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names'
-                                type: string
-                              optional:
-                                description: Specify whether the Secret or its key must be defined
-                                type: boolean
-                            required:
-                              - key
-                            type: object
-                          default: {}
-                          description: A map of properties pulled from a Secret. Values must be a `SecretKeySelector`
+                          description: A map of properties to put in the connector configuration file. They can be specified either as a raw value or be read from a Secret or ConfigMap.
                           type: object
                       required:
                         - connectorName
