--- a/tests/templates/kuttl/smoke/00-limit-range.yaml
+++ b/tests/templates/kuttl/smoke/00-limit-range.yaml
@@ -1,12 +1,11 @@
-# FIXME: Blocked by e.g. zookeeper not having resources set
-# ---
-# apiVersion: v1
-# kind: LimitRange
-# metadata:
-#   name: limit-request-ratio
-# spec:
-#   limits:
-#   - type: "Container"
-#     maxLimitRequestRatio:
-#       cpu: 5
-#       memory: 1
+---
+apiVersion: v1
+kind: LimitRange
+metadata:
+  name: limit-request-ratio
+spec:
+  limits:
+  - type: "Container"
+    maxLimitRequestRatio:
+      cpu: 5
+      memory: 1
