--- a/examples/simple-trino-cluster-authentication-opa-authorization-s3.yaml
+++ b/examples/simple-trino-cluster-authentication-opa-authorization-s3.yaml
@@ -9,10 +9,7 @@ spec:
     stackableVersion: "0.0.0-dev"
   clusterConfig:
     authentication:
-      method:
-        multiUser:
-          userCredentialsSecret:
-            name: simple-trino-users-secret
+      - authenticationClass: simple-trino-users
     authorization:
       opa:
         configMapName: simple-opa
@@ -29,18 +26,25 @@ spec:
       default:
         replicas: 1
 ---
+apiVersion: authentication.stackable.tech/v1alpha1
+kind: AuthenticationClass
+metadata:
+  name: simple-trino-users
+spec:
+  provider:
+    static:
+      userCredentialsSecret:
+        name: simple-trino-users-secret
+---
 apiVersion: v1
 kind: Secret
 metadata:
   name: simple-trino-users-secret
 type: kubernetes.io/opaque
 stringData:
-  # admin:admin
-  admin: $2y$10$89xReovvDLacVzRGpjOyAOONnayOgDAyIS2nW9bs5DJT98q17Dy5i
-  # alice:alice
-  alice: $2y$10$HcCa4k9v2DRrD/g7e5vEz.Bk.1xg00YTEHOZjPX7oK3KqMSt2xT8W
-  # bob:bob
-  bob: $2y$10$xVRXtYZnYuQu66SmruijPO8WHFM/UK5QPHTr.Nzf4JMcZSqt3W.2.
+  admin: admin
+  alice: alice
+  bob: bob
 ---
 apiVersion: opa.stackable.tech/v1alpha1
 kind: OpaCluster
