--- a/tests/templates/kuttl/authentication/01-assert.yaml
+++ b/tests/templates/kuttl/authentication/01-assert.yaml
@@ -10,3 +10,11 @@ metadata:
 status:
   readyReplicas: 1
   replicas: 1
+---
+apiVersion: apps/v1
+kind: StatefulSet
+metadata:
+  name: openldap-other
+status:
+  readyReplicas: 1
+  replicas: 1
