--- a/docs/templating_vars.yaml
+++ b/docs/templating_vars.yaml
@@ -1,8 +1,8 @@
 ---
 helm:
-  repo_name: stackable-dev
-  repo_url: https://repo.stackable.tech/repository/helm-dev/
+  repo_name: stackable-stable
+  repo_url: https://repo.stackable.tech/repository/helm-stable/
 versions:
-  commons: 0.0.0-dev
-  secret: 0.0.0-dev
-  trino: 0.0.0-dev
+  commons: "23.7"
+  secret: "23.7"
+  trino: "23.7"
