--- a/tests/test-definition.yaml
+++ b/tests/test-definition.yaml
@@ -13,27 +13,27 @@
 dimensions:
   - name: trino
     values:
-      - 387-stackable0.0.0-dev
-      - 395-stackable0.0.0-dev
-      - 396-stackable0.0.0-dev
-      - 403-stackable0.0.0-dev
-      - 414-stackable0.0.0-dev
+      - 387-stackable23.7
+      - 395-stackable23.7
+      - 396-stackable23.7
+      - 403-stackable23.7
+      - 414-stackable23.7
   - name: trino-latest
     values:
-      - 414-stackable0.0.0-dev
+      - 414-stackable23.7
   - name: hive
     values:
-      - 2.3.9-stackable0.0.0-dev
-      - 3.1.3-stackable0.0.0-dev
+      - 2.3.9-stackable23.7
+      - 3.1.3-stackable23.7
   - name: opa
     values:
-      - 0.45.0-stackable0.0.0-dev
+      - 0.45.0-stackable23.7
   - name: hdfs
     values:
-      - 3.3.4-stackable0.0.0-dev
+      - 3.3.4-stackable23.7
   - name: zookeeper
     values:
-      - 3.8.0-stackable0.0.0-dev
+      - 3.8.0-stackable23.7
   - name: s3-use-tls
     values:
       - "true"
