getting-started corrections: change to full version and run templating

--- a/docs/modules/trino/examples/getting_started/code/trino.yaml
+++ b/docs/modules/trino/examples/getting_started/code/trino.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   image:
     productVersion: "414"
-    stackableVersion: "0.0.0-dev"
+    stackableVersion: "23.7.0"
   clusterConfig:
     catalogLabelSelector:
       matchLabels:
