--- a/deploy/helm/trino-operator/crds/crds.yaml
+++ b/deploy/helm/trino-operator/crds/crds.yaml
@@ -7084,7 +7084,7 @@ spec:
                       nullable: true
                       type: string
                     stackableVersion:
-                      description: Stackable version of the product, e.g. 2.1.0. If not specified, the operator will use the same version as he has (e.g. `23.4.1` or `0.0.0-dev`)
+                      description: Stackable version of the product, e.g. `23.4`, `23.4.1` or `0.0.0-dev`. If not specified, the operator will use the same version as he has (e.g. `23.4.1` or `0.0.0-dev`)
                       nullable: true
                       type: string
                   type: object
