--- a/deploy/helm/trino-operator/crds/crds.yaml
+++ b/deploy/helm/trino-operator/crds/crds.yaml
@@ -7084,7 +7084,7 @@ spec:
                       nullable: true
                       type: string
                     stackableVersion:
-                      description: Stackable version of the product, e.g. `23.4`, `23.4.1` or `0.0.0-dev`. If not specified, the operator will use a floating image tag pointing to the latest patch version of this release line, e.g. `23.4`. When using a nightly operator it will use the nightly `0.0.0-dev` image.
+                      description: Stackable version of the product, e.g. `23.4`, `23.4.1` or `0.0.0-dev`. If not specified, the operator will use its own version, e.g. `23.4.1`. When using a nightly operator it will use the nightly `0.0.0-dev` image.
                       nullable: true
                       type: string
                   type: object
