--- a/deploy/helm/trino-operator/crds/crds.yaml
+++ b/deploy/helm/trino-operator/crds/crds.yaml
@@ -7052,7 +7052,6 @@ spec:
                         - productVersion
                     - required:
                         - productVersion
-                        - stackableVersion
                   description: Trino product image to use.
                   properties:
                     custom:
@@ -7062,7 +7061,7 @@ spec:
                       description: Version of the product, e.g. `1.4.1`.
                       type: string
                     pullPolicy:
-                      default: IfNotPresent
+                      default: Always
                       description: '[Pull policy](https://kubernetes.io/docs/concepts/containers/images/#image-pull-policy) used when pulling the Images'
                       enum:
                         - IfNotPresent
@@ -7085,7 +7084,8 @@ spec:
                       nullable: true
                       type: string
                     stackableVersion:
-                      description: Stackable version of the product, e.g. 2.1.0
+                      description: Stackable version of the product, e.g. `23.4`, `23.4.1` or `0.0.0-dev`. If not specified, the operator will use its own version, e.g. `23.4.1`. When using a nightly operator or a pr version, it will use the nightly `0.0.0-dev` image.
+                      nullable: true
                       type: string
                   type: object
                 workers:
