--- a/rust/crd/Cargo.toml
+++ b/rust/crd/Cargo.toml
@@ -5,20 +5,19 @@ edition = "2021"
 license = "OSL-3.0"
 name = "stackable-trino-crd"
 repository = "https://github.com/stackabletech/trino-operator"
-version = "0.0.0-dev"
 publish = false
+version.workspace = true
 
 [dependencies]
-stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", tag = "0.45.1" }
-
-semver = "1.0"
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
-snafu = "0.7"
-strum = { version = "0.24", features = ["derive"] }
-tracing = "0.1"
+semver = { workspace = true }
+serde = { workspace = true }
+serde_json = { workspace = true }
+snafu = { workspace = true }
+stackable-operator = { workspace = true }
+strum = { workspace = true }
+tracing = { workspace = true }
 
 [dev-dependencies]
-indoc = "1.0"
-rstest = "0.17"
-serde_yaml = "0.9"
+indoc = { workspace = true }
+rstest = { workspace = true }
+serde_yaml = { workspace = true }
