--- a/rust/crd/Cargo.toml
+++ b/rust/crd/Cargo.toml
@@ -9,15 +9,15 @@ publish = false
 version.workspace = true
 
 [dependencies]
-semver = { workspace = true }
-serde = { workspace = true }
-serde_json = { workspace = true }
-snafu = { workspace = true }
-stackable-operator = { workspace = true }
-strum = { workspace = true }
-tracing = { workspace = true }
+semver.workspace = true
+serde.workspace = true
+serde_json.workspace = true
+snafu.workspace = true
+stackable-operator.workspace = true
+strum.workspace = true
+tracing.workspace = true
 
 [dev-dependencies]
-indoc = { workspace = true }
-rstest = { workspace = true }
-serde_yaml = { workspace = true }
+indoc.workspace = true
+rstest.workspace = true
+serde_yaml.workspace = true
