--- a/rust/operator-binary/Cargo.toml
+++ b/rust/operator-binary/Cargo.toml
@@ -12,19 +12,19 @@ version.workspace = true
 [dependencies]
 stackable-trino-crd = { path = "../crd" }
 
-anyhow = { workspace = true }
-async-trait = { workspace = true }
-clap = { workspace = true }
-futures = { workspace = true }
-indoc = { workspace = true }
-openssl = { workspace = true }
-pin-project = { workspace = true }
-semver = { workspace = true }
-snafu = { workspace = true }
-stackable-operator = { workspace = true }
-strum = { workspace = true }
-tokio = { workspace = true }
-tracing = { workspace = true }
+anyhow.workspace = true
+async-trait.workspace = true
+clap.workspace = true
+futures.workspace = true
+indoc.workspace = true
+openssl.workspace = true
+pin-project.workspace = true
+semver.workspace = true
+snafu.workspace = true
+stackable-operator.workspace = true
+strum.workspace = true
+tokio.workspace = true
+tracing.workspace = true
 
 [build-dependencies]
-built = { workspace = true }
+built.workspace = true
