--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,4 +31,4 @@ tokio = { version = "1.29", features = ["full"] }
 tracing = "0.1"
 
 # [patch."https://github.com/stackabletech/operator-rs.git"]
-# stackable-operator = { git = "https://github.com/stackabletech//operator-rs.git", branch = "bump/kube" }
+# stackable-operator = { git = "https://github.com/stackabletech//operator-rs.git", branch = "main" }
