--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,5 +3,32 @@ members = [
     "rust/crd", "rust/operator-binary"
 ]
 
+[workspace.package]
+version = "0.0.0-dev"
+authors = ["Stackable GmbH <info@stackable.tech>"]
+license = "OSL-3.0"
+edition = "2021"
+repository = "https://github.com/stackabletech/trino-operator"
+
+[workspace.dependencies]
+anyhow = "1.0"
+async-trait = "0.1"
+built = { version =  "0.6", features = ["chrono", "git2"] }
+clap = "4.3"
+futures = { version = "0.3", features = ["compat"] }
+indoc = "2.0"
+openssl = "0.10"
+pin-project = "1.1"
+rstest = "0.18"
+semver = "1.0"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+serde_yaml = "0.9"
+snafu = "0.7"
+stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", tag = "0.46.0" }
+strum = { version = "0.25", features = ["derive"] }
+tokio = { version = "1.29", features = ["full"] }
+tracing = "0.1"
+
 # [patch."https://github.com/stackabletech/operator-rs.git"]
 # stackable-operator = { git = "https://github.com/stackabletech//operator-rs.git", branch = "main" }
