--- a/deploy/helm/trino-operator/crds/crds.yaml
+++ b/deploy/helm/trino-operator/crds/crds.yaml
@@ -85,6 +85,11 @@ spec:
                           description: matchLabels is a map of {key,value} pairs. A single {key,value} in the matchLabels map is equivalent to an element of matchExpressions, whose key field is "key", the operator is "In", and the values array contains only "value". The requirements are ANDed.
                           type: object
                       type: object
+                    gracefulShutdownSeconds:
+                      default: 3600
+                      format: uint64
+                      minimum: 0.0
+                      type: integer
                     listenerClass:
                       default: cluster-internal
                       description: |-
