--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ async-trait = "0.1"
 built = { version =  "0.6", features = ["chrono", "git2"] }
 clap = "4.3"
 futures = { version = "0.3", features = ["compat"] }
+humantime-serde = "1.1"
 indoc = "2.0"
 openssl = "0.10"
 pin-project = "1.1"
