--- a/rust/crd/Cargo.toml
+++ b/rust/crd/Cargo.toml
@@ -9,6 +9,7 @@ repository.workspace = true
 publish = false
 
 [dependencies]
+humantime-serde.workspace = true
 semver.workspace = true
 serde.workspace = true
 serde_json.workspace = true
