--- a/deploy/helm/trino-operator/crds/crds.yaml
+++ b/deploy/helm/trino-operator/crds/crds.yaml
@@ -3603,6 +3603,29 @@ spec:
                               type: array
                           type: object
                       type: object
+                    roleConfig:
+                      default:
+                        podDisruptionBudget:
+                          enabled: true
+                          maxUnavailable: null
+                      properties:
+                        podDisruptionBudget:
+                          default:
+                            enabled: true
+                            maxUnavailable: null
+                          properties:
+                            enabled:
+                              default: true
+                              description: Whether a PodDisruptionBudget should be written out for this role. Disabling this enables you to specify your own - custom - one. Defaults to true.
+                              type: boolean
+                            maxUnavailable:
+                              description: The number of Pods that are allowed to be down because of voluntary disruptions. If you don't explicitly set this, the operator will use a sane default based upon knowledge about the individual product.
+                              format: uint16
+                              minimum: 0.0
+                              nullable: true
+                              type: integer
+                          type: object
+                      type: object
                     roleGroups:
                       additionalProperties:
                         properties:
@@ -10600,6 +10623,29 @@ spec:
                                     type: object
                                 type: object
                               type: array
+                          type: object
+                      type: object
+                    roleConfig:
+                      default:
+                        podDisruptionBudget:
+                          enabled: true
+                          maxUnavailable: null
+                      properties:
+                        podDisruptionBudget:
+                          default:
+                            enabled: true
+                            maxUnavailable: null
+                          properties:
+                            enabled:
+                              default: true
+                              description: Whether a PodDisruptionBudget should be written out for this role. Disabling this enables you to specify your own - custom - one. Defaults to true.
+                              type: boolean
+                            maxUnavailable:
+                              description: The number of Pods that are allowed to be down because of voluntary disruptions. If you don't explicitly set this, the operator will use a sane default based upon knowledge about the individual product.
+                              format: uint16
+                              minimum: 0.0
+                              nullable: true
+                              type: integer
                           type: object
                       type: object
                     roleGroups:
