--- a/docs/modules/trino/examples/usage_guide/opa-bundle-trino-cm.yaml
+++ b/docs/modules/trino/examples/usage_guide/opa-bundle-trino-cm.yaml
@@ -4,7 +4,7 @@ kind: ConfigMap
 metadata:
   name: opa-bundle-trino
   labels:
-    opa.stackable.tech/bundle: "trino"
+    opa.stackable.tech/bundle: "true"
 data:
   trino.rego: |
     package trino
