--- a/deploy/helm/trino-operator/crds/crds.yaml
+++ b/deploy/helm/trino-operator/crds/crds.yaml
@@ -3608,6 +3608,10 @@ spec:
                         podDisruptionBudget:
                           enabled: true
                           maxUnavailable: null
+                      description: |-
+                        This is a product-agnostic RoleConfig, which fulfills the needs for most of the product. Currently it contains:
+
+                        1. `podDisruptionBudget` to configure the created PDBs.
                       properties:
                         podDisruptionBudget:
                           default:
@@ -10630,6 +10634,10 @@ spec:
                         podDisruptionBudget:
                           enabled: true
                           maxUnavailable: null
+                      description: |-
+                        This is a product-agnostic RoleConfig, which fulfills the needs for most of the product. Currently it contains:
+
+                        1. `podDisruptionBudget` to configure the created PDBs.
                       properties:
                         podDisruptionBudget:
                           default:
