--- a/tests/templates/kuttl/smoke/10-assert.yaml
+++ b/tests/templates/kuttl/smoke/10-assert.yaml
@@ -9,6 +9,10 @@ apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name: trino-coordinator-default
+spec:
+  template:
+    spec:
+      terminationGracePeriodSeconds: 900
 status:
   readyReplicas: 1
   replicas: 1
@@ -17,6 +21,10 @@ apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name: trino-worker-default
+spec:
+  template:
+    spec:
+      terminationGracePeriodSeconds: 75 # 5s gracefulShutdownTimeout + 2 x 30s grace period + 10s safety buffer
 status:
   readyReplicas: 1
   replicas: 1
